--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http:  # Assurez-vous d'utiliser la dernière version disponible
+  dio:
+  flutter_map: ^6.1.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
